--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
     "@mui/styled-engine-sc": "^6.4.6",
+    "@reach/combobox": "^0.18.0",
+    "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/vite": "^4.0.12",
     "axios": "^1.8.2",
     "framer-motion": "^12.5.0",
@@ -28,7 +30,8 @@
     "react-router-dom": "^7.3.0",
     "react-toastify": "^11.0.5",
     "styled-components": "^6.1.15",
-    "tailwindcss": "^4.0.12"
+    "tailwindcss": "^4.0.12",
+    "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
